# aws-s3-ohfuck

./: .gitignore  AGENTS.md  README.md  main.py  mise.toml  pyproject.toml
aws_s3_ohfuck/: cli.py
plans/: 01-the-original-spec.md
tests/: test_live_s3.py  test_main.py
